# Open-Env-Project-Submission

./: Dockerfile  README.md  __init__ .py  __init__.py  app.py  db_migration_environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
